--- a/realoffer/src/pages/Dashboard/components/MyListings/MyListingDashboard/Tabs/Documents/Documents.css
+++ b/realoffer/src/pages/Dashboard/components/MyListings/MyListingDashboard/Tabs/Documents/Documents.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.8rem;
-  padding-top: 1rem;
+  padding-top: 0rem;
   margin-bottom: 1rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
